NBNP-16 Fix placeholder position in Relationships chosen search fields

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -516,6 +516,9 @@ a.btn-add::before {
 .chosen-container-single .chosen-single span {
   margin-right: 5em;
 }
+.chosen-search-input {
+  height: 32px!important;
+}
 
 /* Bootstrap overrides */
 .page-header {
