NBNP-204 Add View Browse Issues class + style rules

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -355,8 +355,17 @@ p {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-.owl-item {
+
+/* Browse Issues */
+.browse-issues .owl-item {
   margin-top: 1em;
+}
+.browse-issues img {
+  transition: all .2s ease-in-out;
+}
+.browse-issues a:focus img,
+.browse-issues a:hover img {
+  box-shadow: 0 0 9px 3px rgba(0, 0, 0, .25);
 }
 
 /* High resolution Digital Page pager */
