--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -356,6 +356,15 @@ p {
   transition: all .2s ease-in-out;
 }
 
+.owl-item .issue-image {
+  width: 150px;
+}
+.owl-item span {
+  background: url(/themes/custom/newspapers_lib_unb_ca/dist/img/loading-150px.gif) no-repeat 50% 50%;
+  display: inherit;
+  max-width: 100%;
+  height: 240px;
+}
 /* Browse Issues */
 .browse-issues .owl-item {
   margin-top: 1em;
