--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -356,18 +356,18 @@ p {
   transition: all .2s ease-in-out;
 }
 
-.owl-item .issue-image {
+/* Browse Issues */
+.browse-issues .owl-item {
+  margin-top: 1em;
+}
+.browse-issues .owl-item .issue-image {
   width: 150px;
 }
-.owl-item span {
+.browse-issues .owl-item span:first-child {
   background: url(/themes/custom/newspapers_lib_unb_ca/dist/img/loading-150px.gif) no-repeat 50% 50%;
   display: inherit;
   max-width: 100%;
   height: 240px;
-}
-/* Browse Issues */
-.browse-issues .owl-item {
-  margin-top: 1em;
 }
 .browse-issues img {
   transition: all .2s ease-in-out;
@@ -501,7 +501,9 @@ a.btn-add::before {
   margin-left: auto;
   margin-right: auto;
 }
-
+.font-weight-bold {
+  font-weight: bold;
+}
 .no-borders,
 .title-details .file>span {
   border: none;
