NBNP-204 Single issue carousel responsive heading fix

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -803,6 +803,12 @@ a.back-link::before {
   margin-bottom: 2.5em;
 }
 
+@media (min-width: 992px) {
+  /* Single issue responsive grouping txt fix */
+  .owl-carousel .owl-wrapper {
+    min-width: 870px!important;
+  }
+}
 @media (max-width: 767px) {
   .no-gutters > aside {
     padding-left: 0;
