NBNP-107 Reduced tab whitespace on smaller width devices

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -852,6 +852,9 @@ a.back-link::before {
     max-width: 120px;
     max-height: 160px;
   }
+  .tab-content {
+    padding: 2.6em 3em 2em;
+  }
 }
 @media (min-width: 768px)
 and (max-width: 991px){
