NBNP-204 Match carousel nav button color to mobile top nav

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -360,7 +360,7 @@ p {
   width: 100%;
 }
 .owl-theme .owl-controls .owl-buttons div {
-  background: #900;
+  background: #d82e3b;
   border: 1px solid #fff;
   box-shadow: 0 0 1px 0px white inset, 0 0 1px 0px white;
   padding: 4px 14px;
