--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -74,6 +74,33 @@
     </nav>
 {% endif %}
 
+{% if view_mode == 'featured' %}
+<div class="featured-publication col-xs-12 col-md-6 well">
+    <div class="col-xs-4 pull-left">
+    {% if content.field_sample_image|field_value %}
+        {{ content.field_sample_image }}
+    {% else %}
+        <img class="no-borders image-placeholder" src="/{{ active_theme_path() }}/src/img/sample-publication.jpg" alt="" />
+    {% endif %}
+    </div>
+    <div class="details col-xs-offset-4">
+        <h2>Featured Publication</h2>
+        <div><strong>{{ label }}</strong></div>
+        {% if content.field_place_of_publication|field_value %}
+            <div class="date">{{ publication_date_value }}</div>
+        {% endif %}
+        {% if content.field_place_of_publication|field_value %}
+            <div class="place">{{ content.field_place_of_publication|field_value }}</div>
+        {% endif %}
+        {% if frequency_value %}
+            <div class="frequency">{{ frequency_value }}</div>
+        {% endif %}
+        {% if content.field_description|field_value %}
+            <div class="description">{{ content.field_description|field_value }}</div>
+        {% endif %}
+    </div>
+</div>
+{% else %}
 <main {{ attributes.addClass("no-gutters") }}>
     <div class="row">
         <section class="publication col-sm-8">
@@ -312,3 +339,4 @@
         </aside>
     </div>
 </main>
+{% endif %}
