NBNP-258 Increase section padding override specificity

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -842,7 +842,7 @@ a.back-link::before {
   padding-left: 0;
 }
 @media (max-width: 991px) {
-.path-frontpage section {
+.path-frontpage section section {
   padding-left: 0;
   padding-right: 0;
 }
