--- a/custom/themes/newspapers_lib_unb_ca/templates/views-infinite-scroll-pager.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/views-infinite-scroll-pager.html.twig
@@ -9,7 +9,7 @@
 <ul{{ attributes }}>
   <li class="pager__item">
     <a class="button" href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next">{{ options.button_text }}
-      <span class="hidden"><img src="/themes/custom/newspapers_lib_unb_ca/dist/img/ajax-loader.gif" alt="Loading" /></span></a>
+      <span class="hide"><img src="/themes/custom/newspapers_lib_unb_ca/dist/img/ajax-loader.gif" alt="Loading" /></span></a>
   </li>
 </ul>
 {% endif %}
