NBNP-260 Add front page 'About' tab for blurb on mobile

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -36,6 +36,12 @@ a#tab-title:before {
     font-size: small;
     padding-right: 4px;
 }
+a#tab-about:before {
+    font-family: "Glyphicons Halflings";
+    content: "\e086";
+    font-size: small;
+    padding-right: 4px;
+}
 .tab-pane div.form-item,
 .tab-pane div.description {
     width: 75%;
