NBNP-259 Separate featured/history blocks from front search form

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -8,6 +8,9 @@ form .nav-tabs > li.active > a:focus {
     border-color: #333;
     border-bottom: none;
 }
+form {
+    margin-bottom: 2.5em;
+}
 form .nav-tabs > li > a {
     border:none;
 }
