--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -85,7 +85,7 @@
     </div>
     <div class="col-xs-offset-4">
         <h2>Featured Publication</h2>
-        <div class="title"><strong>{{ label }}</strong></div>
+        <div class="title"><strong><a href="{{ url }}">{{ label }}</a></strong></div>
         {% if content.field_place_of_publication|field_value %}
             <div class="date">{{ publication_date_value }}</div>
         {% endif %}
