--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -413,9 +413,12 @@ p {
 .browse-issues img {
   transition: all .2s ease-in-out;
 }
-.browse-issues a:focus img.img-responsive,
-.browse-issues a:hover img.img-responsive {
-  box-shadow: 0 0 6px 3px rgba(0, 0, 0, .25);
+.image-link-shadow a img {
+  transition: box-shadow .25s ease-out;
+}
+.image-link-shadow a:focus img,
+.image-link-shadow a:hover img {
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, .25);
 }
 
 /* High resolution Digital Page pager */
