--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -12,9 +12,9 @@ figcaption .glyphicon {
   margin-right: .25em;
   top: 3px;
 }
-a:not(.btn):focus,
-a:not(.btn):hover,
-a:not(.btn):active {
+a:not(.btn):not(.cd-top):focus,
+a:not(.btn):not(.cd-top):hover,
+a:not(.btn):not(.cd-top):active {
   border-bottom-style: none;
   text-decoration: underline;
 }
