--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -248,7 +248,9 @@ select[multiple="multiple"] + .form-control {
   font-size: .9em;
 }
 input[type="checkbox"].facets-checkbox {
-  margin-right: .25em;
+  height: 1.55em;
+  margin-right: .3em;
+  margin-top: 0;
 }
 ul.js-facets-checkbox-links + a::before {
   font-family: "Glyphicons Halflings";
