NBNP-205 Darken links in Bootstrap wells (WCAG-AA)

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -12,6 +12,9 @@ figcaption .glyphicon {
   margin-right: .25em;
   top: 3px;
 }
+.well a {
+  color: $link-color;
+}
 a:not(.btn):not(.button):not(.cd-top):focus,
 a:not(.btn):not(.button):not(.cd-top):hover,
 a:not(.btn):not(.button):not(.cd-top):active {
