BugzID: 8318 Edit no holdings statement

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -332,7 +332,10 @@
                  {% else %}
                     <div class="text-muted">
                         <small><i class="glyphicon glyphicon-info-sign"></i></small>
-                        {% trans %}No holdings found.{% endtrans %}
+                        {% trans %}
+                            No digital holdings.
+                            <p style="text-indent:1em">See Microform staff.</p>
+                        {% endtrans %}
                     </div>
                 {% endif %}
                 </div>
