NBNP-274 `put that text on one line for no holdings`

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -332,10 +332,7 @@
                  {% else %}
                     <div class="text-muted">
                         <small><i class="glyphicon glyphicon-info-sign"></i></small>
-                        {% trans %}
-                            No digital holdings.
-                            <p style="text-indent:1em">See Microform staff.</p>
-                        {% endtrans %}
+                        {% trans %}No digital holdings. See Microform staff.{% endtrans %}
                     </div>
                 {% endif %}
                 </div>
