Update config for Search_api_solr upgrade, restore table sorting

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -684,7 +684,7 @@ a.btn-add::before {
   display: inline;
   font-size: smaller;
 }
-.search-results .views-field-field-sort-title span:first-of-type::before {
+.search-results tbody .views-field-field-sort-title span:first-of-type::before {
   content: 'Available: ';
   margin-left: .5em;
 }
