--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -457,6 +457,9 @@ nav[role="navigation"]{
 }
 
 /* Fix overrides.min.css & unb-lib.css conflict */
+.icon-unb {
+  margin-top: 0;
+}
 a.disabled {
   color: $text-muted;
 }
