NBNP-131 Update facet slider link colors: swap hot pink/heat wave orange w/ subtheme standards

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -240,6 +240,17 @@ select[multiple="multiple"] + .form-control {
   text-decoration: underline;
   z-index: 1;
 }
+.ui-slider-pips {
+  .ui-slider-label {
+    color: $text-muted;
+  }
+  .ui-slider-pip-selected-1,
+  .ui-slider-pip-selected-2 {
+    .ui-slider-label {
+      color: $link-color;
+    }
+  }
+}
 .facets-widget-checkbox ul {
   padding-left: .5em;
 }
