NBNP-280 Make Facets BS-4 compatible, coding standards improvement - js custom facet js asset

--- a/custom/themes/newspapers_lib_unb_ca/templates/facets-result-item.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/facets-result-item.html.twig
@@ -23,4 +23,4 @@
 {% if show_count %}
   <span class="facet-item__count">({{ count }})</span>
 {% endif %}
-<img class="hide" src="/themes/custom/newspapers_lib_unb_ca/dist/img/ajax-loader.gif" alt="Loading">
+<img class="d-none" src="/themes/custom/newspapers_lib_unb_ca/dist/img/ajax-loader.gif" alt="Loading">
