NBNP-280 Purge deprecated subtheme CSS

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -370,8 +370,7 @@ a.disabled {
   color: $text-muted;
 }
 
-.select-wrapper select,
-input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=date]) {
+.select-wrapper select {
   line-height: normal;
   height: inherit;
 }
